# ai

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/ai/: case.py  consultation.py  embedder.py  embedding_engine.py  legal_consultant.py  legal_search.py  retriever.py  vector_store.py
app/ai/prompts/: case_analysis.md  case_title.md  consultation_advisor.md  consultation_answer.md  cosultation_keyword.md  loader.py
app/api/: __init__.py  case.py  consultation.py
app/core/: config.py  deps.py
app/db/: redis.py
app/models/: __init__.py  case.py  user.py
app/schemas/: case.py  consultation.py
app/services/: case_service.py  consultation_service.py
